Compressed upcoming orders view. Fixed image page jump on manual order pickup popup. CSS cleanup for all popups, giving popups new way to be uniquely styled with classname system.

--- a/terminal-frontend/src/components/pickup-popup-window/style.css
+++ b/terminal-frontend/src/components/pickup-popup-window/style.css
@@ -1,3 +1,3 @@
-.popup-children-container > div > .orderList > li {
+.pickupPopup > div > .orderList > li {
   font-size: 32px;
 }
